# ValveControl2000

./: .gitignore  LICENSE  README.md  compile_translations.sh  configuration.py  constants.py  generate_translation_files.sh  main.py  mqtt_client.py  pyproject.toml  requirements.txt  setup.py  utils.py  zone_control.py
assets/: icon.icns
locales/: messages.pot
locales/hu/LC_MESSAGES/: messages.mo  messages.po
